hphp/test/slow/inout/bad-memoize.php.expectf

Fatal error: <<__Memoize>> cannot be used on functions with inout parameters in %s/bad-memoize.php on line 4
